# TRooFit

./: .gitignore  CMakeLists.txt  README.md
TRooFit/: LinkDef.h  TRooAbsH1.h  TRooAbsH1Fillable.h  TRooAbsHStack.h  TRooChi2Constraint.h  TRooExtendedBinding.h  TRooFitResult.h  TRooGPConstraint.h  TRooH1.h  TRooH1D.h  TRooHF1.h  TRooHF1D.h  TRooHPdfStack.h  TRooHStack.h  TRooSlider.h  TRooWorkspace.h  Utils.h
TRooFit/apps/: TRooABCD.h  TRooMatrixMethod.h  TRooUnfold.h
cmt/: requirements  version.cmt
demo/: abcdExample.C  abcdMultiBinExample.C  fullExample.C  histograms.root  unfoldingExample.C
demo/ABCD/: abcdInputHistograms.root  abcdInputTrees.root  tutorial.C
demo/ModelBuilding/: countingSingleBinModel.C  histBkgWithGaussianSignal.C
src/: Asymptotics.cxx  TRooAbsH1.cxx  TRooAbsH1Fillable.cxx  TRooAbsHStack.cxx  TRooChi2Constraint.cxx  TRooExtendedBinding.cxx  TRooFitResult.cxx  TRooGPConstraint.cxx  TRooH1.cxx  TRooH1D.cxx  TRooHF1.cxx  TRooHF1D.cxx  TRooHPdfStack.cxx  TRooHStack.cxx  TRooWorkspace.cxx  Utils.cxx
src/apps/: TRooABCD.cxx  TRooMatrixMethod.cxx  TRooUnfold.cxx
test/: testABCD.C  testABCDEFG.C  testABCDWithUncert.C  testABCD_v2.C  testABCD_v3.C  testCloneTRooH1.C  testFit1Bin.C  testFit1Bin_v2.C  testGPConstraint.C  testInterpolation.C  testMissingBin.C  testMissingBinV2.C  testSPlusB.C  testStackWithGaussian.C  testTRooH1D.C  testTRooHStack.C  testTRooHStackNegative.C  testTransFactor.C  twoBinModel.C  twoBinModelV2.C
